--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,37 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         colors="true"
-         processIsolation="false"
-         stopOnFailure="false"
-         bootstrap="tests/bootstrap.php"
-         cacheDirectory=".phpunit.cache"
-         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.1/phpunit.xsd">
+<phpunit
+    colors="true"
+    processIsolation="false"
+    stopOnFailure="false"
+    bootstrap="tests/bootstrap.php"
+    cacheDirectory=".phpunit.cache"
+    backupGlobals="false">
+
     <php>
         <ini name="memory_limit" value="-1"/>
         <ini name="apc.enable_cli" value="1"/>
     </php>
 
-    <!-- Add any additional test suites you want to run here -->
     <testsuites>
-        <testsuite name="app">
+        <testsuite name="App Test Suite">
             <directory>tests/TestCase/</directory>
         </testsuite>
-        <!-- Add plugin test suites here. -->
     </testsuites>
-
-    <!-- Load extension for fixtures -->
-    <extensions>
-        <bootstrap class="Cake\TestSuite\Fixture\Extension\PHPUnitExtension"/>
-    </extensions>
-
-    <!-- Ignore vendor tests in code coverage reports -->
+    
     <source>
         <include>
             <directory suffix=".php">src/</directory>
-            <directory suffix=".php">plugins/*/src/</directory>
         </include>
         <exclude>
-            <file>src/Console/Installer.php</file>
+            <directory suffix=".php">src/Console/</directory>
+            <directory suffix=".php">vendor/</directory>
         </exclude>
     </source>
+
+    <logging>
+        <junit outputFile="build/junit.xml"/>
+        <testdoxHtml outputFile="build/testdox.html"/>
+        <testdoxText outputFile="build/testdox.txt"/>
+    </logging>
 </phpunit>
